@@ -56,7 +56,7 @@ Only dump functions definitions.
 \fB\-\-quiet\fP (\fB\-q\fP)
 Don't print the welcome message.
 .TP
-\fB\-\-trace\fP (\fB\-t\fP)
+\fB\-\-Xdebug\fP (\fB\-X\fP)
 Trace network interaction between
 .I mclient
 and the server.
