@@ -1,3 +1,7 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Wed Nov  7 2012 Sjoerd Mullender <sjoerd@acm.org>
+- Changed msqdump's trace option to be in line with mclient.  In both
+  cases, the long option is --Xdebug and the short option is -X.
+
